# Ultimate-Tic-Tac-Toe

./: README.md
C#/: GameBoard.cs  GameManager.cs  MiniBoard.cs  Testing.cs  Tools.cs  UltimateAI.cs  UltimateBoard.cs
OCaml/: dune-project  setup.sh  uttt.opam  uttt.opam.locked
OCaml/lib/: ai.ml  ai.mli  ai_game.mli  constants.ml  opt.ml  player.mli  protocol.ml  server.ml  ultimate_position.mli
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/lib/: all-00000000000000000000000000000000  runtest-00000000000000000000000000000000
_build/.promotion-staging/test/: testing.ml
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: action.ml  action.pp.ml  ai.pp.ml  ai.pp.mli  ai_game.pp.ml  ai_game.pp.mli  board.mli  board.pp.ml  board.pp.mli  client.ml  client.pp.ml  connection.ml  connection.pp.ml  constants.pp.ml  cursor_pos.ml  cursor_pos.mli  cursor_pos.pp.ml  cursor_pos.pp.mli  model.pp.ml  multi_uttt.cma  multi_uttt.cmxa  multi_uttt.cmxs  multi_uttt.ml-gen  opt.pp.ml  player.pp.ml  player.pp.mli  position.ml  position.pp.ml  position.pp.mli  protocol.pp.ml  scoring.ml  scoring.pp.ml  scoring.pp.mli  server.pp.ml  ultimate_position.pp.ml  ultimate_position.pp.mli  user.ml  user.pp.ml  user.pp.mli
_build/default/test/: multi_uttt_test.cma  multi_uttt_test.cmxa  multi_uttt_test.cmxs  multi_uttt_test.ml-gen  testing.ml  testing.pp.ml
lib/: ai_game.ml  board.ml  dune  model.ml  player.ml  position.mli  scoring.mli  ultimate_position.ml  user.mli
test/: dune
(+146 files in other folders)
